fixup 80e7178 fix spacing

--- a/src/adhocracy/static_src/stylesheets/widgets/_comment.scss
+++ b/src/adhocracy/static_src/stylesheets/widgets/_comment.scss
@@ -61,7 +61,7 @@
 
 // top level comment form
 .comment_wrapper {
-    margin-top: 1px;
+    border-top: 1px solid #fff;
     padding: 1px 1.5em;
 }
 
